# PancoGame

./: .clang-format  README.md
CineMaker/: .gitignore  Makefile  canvas.cpp  canvas.h  leftPane.cpp  leftPane.h  main.cpp  mainWindow.cpp  mainWindow.h  rightPane.cpp  rightPane.h
MapEditor/: BaseToolBar.cpp  BaseToolBar.h  Makefile  ModelColumns.h  mainWindow.cpp
Serda/: .gitignore  CMakeLists.txt  Makefile  entity.cpp  entity.h  game.cpp  game.h  game_state.cpp  game_state.h  joystick.h  media.cpp  media.h  range.h  resource_manager.cpp  resource_manager.h  state.cpp  state.h  state_ids.h  state_stack.cpp  state_stack.h  title_state.cpp  title_state.h  troll_state.cpp  troll_state.h  world.cpp  world.h  world_lua.cpp  world_manager.cpp  world_manager.h  world_xml_parser.cpp  world_xml_parser.h
Serda/media/images/: dictionary
Serda/media/lua/: dictionary  hello_world.lua  init.lua  link_input.lua  sentinel.lua  template.lua
Serda/media/maps/: dictionary  xml_branch_map.xml
Serda/rapidxml/: rapidxml_print.hpp
SnakeTest/SnakeTest/: SnakeTest.pro  main.cpp
SnakeTest/build-SnakeTest-Desktop-Debug/: Makefile  SnakeTest
media/fonts/: dictionary
media/images/: dictionary
media/lua/: dictionary  link_input.lua  template.lua
myTest/1Test/: 1Test  main.cpp
myTest/2Test/: .main.cpp.swp  MobilityTest  main.cpp
myTest/textureTest/: TextureTest  main.cpp
src/: entity.cpp  entity.h  game.cpp  game_state.cpp  game_state.h  keyboard.h  lua.hpp  main.cpp  media.h  menu_state.cpp  menu_state.h  resource_manager.cpp  resource_manager.h  state_ids.h  state_stack.cpp  title_state.cpp  title_state.h  world.cpp  world.h
